bk_ida/gccida/c1/consec_sets_giv
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/consec_sets_giv/src/loop.c:7374:4: error: expected ';' after expression
rtx v22; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/consec_sets_giv/src/loop.c:7374:5: error: use of undeclared identifier 'v22'
rtx v22; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/consec_sets_giv/src/loop.c:7376:4: error: expected ';' after expression
rtx v24; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/consec_sets_giv/src/loop.c:7376:5: error: use of undeclared identifier 'v24'
rtx v24; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/consec_sets_giv/src/loop.c:7378:1: error: use of undeclared identifier 'induction_1'
induction_1 *v26; // rcx 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/consec_sets_giv/src/loop.c:7378:14: error: use of undeclared identifier 'v26'
induction_1 *v26; // rcx 
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/consec_sets_giv/src/loop.c:7379:1: error: use of undeclared identifier 'induction_1'
induction_1 *v; // [rsp+0h] [rbp-50h] BYREF 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/consec_sets_giv/src/loop.c:7379:14: error: use of undeclared identifier 'v'
induction_1 *v; // [rsp+0h] [rbp-50h] BYREF 
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/consec_sets_giv/src/loop.c:7380:6: error: use of undeclared identifier 'add_vala'; did you mean 'add_val'?
rtx *add_vala; // [rsp+8h] [rbp-48h] 
     ^~~~~~~~
     add_val
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/consec_sets_giv/src/loop.c:7358:6: note: 'add_val' declared here
rtx *add_val, 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/consec_sets_giv/src/loop.c:7380:5: error: invalid operands to binary expression ('struct rtx_def *' and 'rtx *' (aka 'struct rtx_def **'))
rtx *add_vala; // [rsp+8h] [rbp-48h] 
~~~ ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/consec_sets_giv/src/loop.c:7381:4: error: expected ';' after expression
rtx src_rega; // [rsp+10h] [rbp-40h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/consec_sets_giv/src/loop.c:7381:5: error: use of undeclared identifier 'src_rega'; did you mean 'src_reg'?
rtx src_rega; // [rsp+10h] [rbp-40h] BYREF 
    ^~~~~~~~
    src_reg
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/consec_sets_giv/src/loop.c:7356:5: note: 'src_reg' declared here
rtx src_reg, 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/consec_sets_giv/src/loop.c:7386:1: error: use of undeclared identifier 'src_rega'; did you mean 'src_reg'?
src_rega = src_reg; 
^~~~~~~~
src_reg
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/consec_sets_giv/src/loop.c:7356:5: note: 'src_reg' declared here
rtx src_reg, 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/consec_sets_giv/src/loop.c:7393:5: error: use of undeclared identifier 'v'
*( &v - 20) = ( induction_1 *)src_rega; 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/consec_sets_giv/src/loop.c:7393:30: error: expected expression
*( &v - 20) = ( induction_1 *)src_rega; 
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/consec_sets_giv/src/loop.c:7393:17: error: use of undeclared identifier 'induction_1'
*( &v - 20) = ( induction_1 *)src_rega; 
                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/consec_sets_giv/src/loop.c:7394:5: error: use of undeclared identifier 'v'
*( &v - 14) = ( induction_1 *)*mult_val; 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/consec_sets_giv/src/loop.c:7394:30: error: expected expression
*( &v - 14) = ( induction_1 *)*mult_val; 
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/consec_sets_giv/src/loop.c:7394:17: error: use of undeclared identifier 'induction_1'
*( &v - 14) = ( induction_1 *)*mult_val; 
                ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/consec_sets_giv/src/obj/loop.o] Error 1
